2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strncmp.S (strncmp): Use lsr instead of
	mov + lsr.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strncmp.S (strncmp): Use a separate shift
	instruction to unbreak builds with binutils 2.26 and older.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strncmp.S (count): New macro.
	(strncmp): Store misaligned length in SRC1 in COUNT.
	(mutual_align): Adjust.
	(misaligned8): Load dword at a time when it is safe.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strcmp.S (do_misaligned): Jump back to
	do_misaligned, not misaligned8.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strcmp.S (misaligned8): Compare dword at a
	time whenever possible.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/memcmp.S (more16): Fix loop16 branch target.

	* sysdeps/aarch64/memcmp.S: Widen comparison to 16 bytes at a
	time.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/memcmp.S: Use L() macro for labels.

2019-09-06  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/memcmp.S (memcmp):
	Rewrite of optimized memcmp.

2019-07-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24699]
	* posix/tst-mmap-offset.c: Mention BZ #24699.
	(do_test_bz21270): Rename to do_test_large_offset and use
	mmap64_maximum_offset to check for maximum expected offset value.
	* sysdeps/generic/mmap_info.h: New file.
	* sysdeps/unix/sysv/linux/mips/mmap_info.h: Likewise.
	* sysdeps/unix/sysv/linux/mmap64.c (MMAP_OFF_HIGH_MASK): Define iff
	__NR_mmap2 is used.

2019-07-12  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/dl-machine.h (elf_machine_lazy_rel): Check
	STO_AARCH64_VARIANT_PCS and bind such symbols at load time.

2019-06-13  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* elf/elf.h (STO_AARCH64_VARIANT_PCS): Define.